# tcp_chat

./: .gitignore  CMakeLists.txt  Makefile
client/: Module.hpp  UserInterface.hpp  main.cpp
common/: HandleErrors.hpp  Messages.hpp  Protocol.hpp  Socket.hpp
server/: Module.hpp  main.cpp
